--- a/css/fly.css
+++ b/css/fly.css
@@ -7,13 +7,16 @@
   overflow: hidden;
 }
 
-#box {
+.box {
+  user-select: none;
+  padding: 8px;
+  z-index: 1;
   transform-style: preserve-3d;
   background-color: rgb(248, 248, 248);
   position: absolute;
   cursor: grab;
   width: 200px;
-  height: 200px;
+  height: 100px;
   border: .5px solid rgba(0, 0, 0, 0.102);
   box-shadow: none;
   transition: box-shadow .8s, transform .1s,left .1s, top .1s;
