--- a/css/fly.css
+++ b/css/fly.css
@@ -2,9 +2,12 @@
   position: relative;
   /* border: 1px solid black; */
   height: 100vh;
-  background-color: rgb(231, 231, 231);
-  perspective: 1000px;
+  background-color: rgb(225, 231, 238);
+  perspective: 500px;
   overflow: hidden;
+  background-image: url("../asset/dot-bg.svg");
+  background-position: right top;
+  background-size: 7px auto;
 }
 
 .box {
@@ -18,7 +21,8 @@
   width: 200px;
   height: 100px;
   border: .5px solid rgba(0, 0, 0, 0.102);
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.102);
   box-shadow: none;
-  transition: box-shadow .8s, transform .1s,left .1s, top .1s;
+  transition: box-shadow .8s, transform .1s,left .05s, top .05s;
   border-radius: 5px;
 }
