--- a/main.css
+++ b/main.css
@@ -5,9 +5,17 @@ body {
 }
 
 #btn {
-  width: 70px;
-  height: 50px;
+  padding: 20px;
   border: .2px solid rgba(75, 75, 75, 0.152);
   border-radius: 5px;
   z-index: 999;
+  cursor: pointer;
+}
+
+#btn:focus {
+  outline: none;
+}
+
+#btn:hover, #btn:focus {
+  background-color: rgb(219, 224, 230);
 }
