--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -11,6 +11,7 @@
 }
 
 .box {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   user-select: none;
   padding: 8px;
   z-index: 1;
@@ -18,8 +19,13 @@
   background-color: rgb(248, 248, 248);
   position: absolute;
   cursor: grab;
-  width: 200px;
-  height: 100px;
+  min-width: 200px;
+  min-height: 30px;
+  max-width: 800px;
+  max-height: 500px;
+  overflow: hidden;
+  /* width: 200px;
+  height: 100px; */
   border: .5px solid rgba(0, 0, 0, 0.102);
   border-bottom: 1.5px solid rgba(0, 0, 0, 0.102);
   box-shadow: none;
