--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -10,17 +10,23 @@
   background-size: 7px auto;
 }
 
+.box:first-child {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .box {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   user-select: none;
-  padding: 8px;
+  padding: 10px;
   z-index: 1;
   transform-style: preserve-3d;
   background-color: rgb(248, 248, 248);
   position: absolute;
   cursor: grab;
   min-width: 200px;
-  min-height: 30px;
+  min-height: 60px;
   max-width: 800px;
   max-height: 500px;
   overflow: hidden;
