--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -11,9 +11,8 @@
 }
 
 .box:first-child {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: 400px;
+  top: 300px;
 }
 
 .box {
