--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -23,7 +23,7 @@
   transform-style: preserve-3d;
   background-color: rgb(248, 248, 248);
   position: absolute;
-  cursor: grab;
+  cursor: default;
   min-width: 200px;
   min-height: 60px;
   max-width: 800px;
