--- a/main.css
+++ b/main.css
@@ -14,7 +14,51 @@ body {
   box-sizing: border-box;
   margin: 0;
   font-family: arial;
+  /* user-select: none; */
 }
+
+.locked:first-child {
+  left: 40%;
+  top: 40%;
+  /* transform: translate(-50%, -50%); */
+}
+
+.locked {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+  padding: 10px;
+  z-index: 1;
+  transform-style: preserve-3d;
+  background-color: rgb(248, 248, 248);
+  color: #8199aa;
+  position: absolute;
+  cursor: default;
+  min-width: 200px;
+  min-height: 60px;
+  max-width: 800px;
+  max-height: 500px;
+  overflow: hidden;
+  /* width: 200px;
+  height: 100px; */
+  border: .5px solid rgba(0, 0, 0, 0.102);
+  border-bottom: 1.5px solid rgba(0, 0, 0, 0.102);
+  box-shadow: none;
+  transition: box-shadow .4s, transform .1s,left .05s, top .05s, opacity .4s;
+  border-radius: 5px;
+}
+
+.locked b, .locked h1 {
+  color: #4e6d89;
+}
+
+
+.locked h3 {
+  color: #6c889e;
+  margin-bottom: 8px;
+
+}
+
 
 
 
