--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -20,7 +20,7 @@
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   user-select: none;
-  padding: 10px;
+  padding: 30px;
   z-index: 1;
   transform-style: preserve-3d;
   background-color: rgb(248, 248, 248);
@@ -28,7 +28,7 @@
   position: absolute;
   cursor: default;
   min-width: 200px;
-  min-height: 60px;
+  min-height: 16px;
   max-width: 800px;
   max-height: 500px;
   overflow: hidden;
@@ -45,6 +45,9 @@
   color: #4e6d89;
 }
 
+.box h1 {
+  margin-top: 5px;
+}
 
 .box h3 {
   color: #6c889e;
