--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -20,7 +20,7 @@
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   user-select: none;
-  padding: 30px;
+  padding: 18px;
   z-index: 1;
   transform-style: preserve-3d;
   background-color: rgb(248, 248, 248);
@@ -29,6 +29,7 @@
   cursor: default;
   min-width: 200px;
   min-height: 16px;
+  width: 210px;
   max-width: 800px;
   max-height: 500px;
   overflow: hidden;
