--- a/main.css
+++ b/main.css
@@ -17,10 +17,9 @@ body {
   /* user-select: none; */
 }
 
-.locked:first-child {
+/* .locked:first-child {
   left: 40%;
   top: 40%;
-  /* transform: translate(-50%, -50%); */
 }
 
 .locked {
@@ -39,16 +38,14 @@ body {
   max-width: 800px;
   max-height: 500px;
   overflow: hidden;
-  /* width: 200px;
-  height: 100px; */
   border: .5px solid rgba(0, 0, 0, 0.102);
   border-bottom: 1.5px solid rgba(0, 0, 0, 0.102);
   box-shadow: none;
   transition: box-shadow .4s, transform .1s,left .05s, top .05s, opacity .4s;
   border-radius: 5px;
-}
+} */
 
-.locked b, .locked h1 {
+/* .locked b, .locked h1 {
   color: #4e6d89;
 }
 
@@ -57,9 +54,49 @@ body {
   color: #6c889e;
   margin-bottom: 8px;
 
+} */
+
+
+
+
+
+
+/* .color-palette {
+  padding: 15px;
+  background-color: rgb(248, 248, 248);
+  opacity: 1;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  z-index: 999;
+  position: fixed;
+  border-radius: 3px;
+} */
+
+.color-palette-bg, .color-palette {
+  /* top: 0;
+  left: 0; */
+  padding: 15px;
+  /* background-color: black; */
+  background-color: rgb(248, 248, 248);
+  /* opacity: 0; */
+  display: none;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  z-index: 999;
+  position: fixed;
+  /* width: 200px; */
+  /* height: 200px; */
+  /* border: 1px solid black; */
+  border-radius: 3px;
 }
 
 
+.color-item-bg:hover, .color-item:hover {
+  outline: .4px solid #6c889e;
+}
 
-
+.color-item-bg:active, .color-item:active {
+  transform: scale(90%);
+}
 
