--- a/src/css/context-menu.css
+++ b/src/css/context-menu.css
@@ -43,18 +43,18 @@
 }
 
 .menu:hover span {
-  background-color: var(--back-color);
-  color: var(--dark-text);
+  background-color: var(--dark-text);
+  color: var(--back-color);
 }
 
 .menu span {
-  color: #4e6d89;
+  color: var(--dark-text);
   /* color: rgb(40, 42, 43); */
   font-size: 10px;
   margin-right: 5px;
   padding: 2px;
   border-radius: 2px;
-  background-color: rgb(224, 229, 233);
+  background-color: var(--box-border);
   float: right;
 }
 
@@ -108,18 +108,18 @@
 }
 
 .document-menu span {
-  color: var(--back-color);
+  color: var(--dark-text);
   font-size: 10px;
   margin-right: 5px;
   padding: 2px;
   border-radius: 2px;
-  background-color: rgb(206, 212, 218);
+  background-color: var(--box-border);
   float: right;
 }
 
 .document-menu:hover span {
-  background-color: var(--back-color);
-  color: var(--dark-text);
+  background-color: var(--dark-text);
+  color: var(--back-color);
 }
 
 
