--- a/src/css/grab.css
+++ b/src/css/grab.css
@@ -7,7 +7,6 @@
   top: 167px;
   z-index: 99;
   transition: .1s ease-out .1s;
-  /* background-color: red; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,9 +24,9 @@
   margin: 0;
   padding: 5px;
   border-radius: 5px;
-  color: aliceblue;
+  color: var(--back-color);
   display: inline-block;
-  background-color: black;
+  background-color: var(--dark-text);
 }
 
 .triangle {
@@ -36,6 +35,6 @@
   width: 0;
   height: 0;
   border-top: 5px solid transparent;
-	border-right: 7px solid black;
+	border-right: 7px solid var(--dark-text);
 	border-bottom: 5px solid transparent;
 }
