--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ body {
   display: inline;
   font-size: 14px;
   font-weight: 500;
-  cursor: pointer;
+  cursor: default;
   color: var(--dark-text);
 }
 
