--- a/main.css
+++ b/main.css
@@ -42,7 +42,6 @@ body {
 
 
 .setting-container {
-  /* display: none; */
   transform: translate(100%, 0);
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.296);
@@ -54,9 +53,6 @@ body {
   height: 100vh;
   width: 100vw;
   transition:  backdrop-filter .1s;
-  /* transition-timing-function: ease-out; */
-  /* border: 1px solid black; */
-
   display: grid;
   place-items: center;
 }
@@ -182,13 +178,14 @@ body {
 
 #select-drag {
   position: fixed;
-  z-index: 9999;
+  z-index: -1;
   opacity: 0.3;
   display: none;
   background-color: var(--dark-text);
+  display: none;
   /* left: 200px;
   top: 200px; */
   /* opacity: 0; */
-  width: 1px;
-  height: 1px;
+  width: 0;
+  height: 0;
 }
