--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -46,16 +46,16 @@
   border: .5px solid var(--box-border);
   border-bottom: 1.5px solid rgba(0, 0, 0, 0.102);
   /* box-shadow: none; */
-  box-shadow:inset 0 -50px 20px -40px white;
+  /* box-shadow:inset 0 -50px 20px -40px white; */
   transition: box-shadow .4s, transform .1s,left .05s, top .05s, opacity .4s;
   border-radius: 5px;
 }
 
-.box::after {
+/* .box::after {
   content: "";
   position: absolute; top: 0; bottom: 0; left: -15px; right: -15px;
-  box-shadow: inset var(--back-color) 0 -45px 15px -30px;
-}
+  box-shadow: inset var(--back-color) 0 -30px 15px -10px;
+} */
 
 ::selection {
   color: inherit;
