--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @import "/src/css/fly.css";
 @import "/src/css/grab.css";
-/* @import "/src/css/btn.css"; */
+@import "/src/css/setting.css";
 @import "/src/css/ui.css";
 @import "/src/css/context-menu.css";
 @import "/src/css/color.css";
@@ -19,6 +19,7 @@
   --container-color : #e1e7ee;
   --xtra-dark-text : #4e6d89;
   --mid-text: #6c889e;
+  --shadow: rgba(0, 0, 0, 0.102);
 }
 
 body {
@@ -30,163 +31,43 @@ body {
   /* user-select: none; */
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-.setting-container {
-  transform: translate(100%, 0);
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.296);
-  backdrop-filter: blur(0);
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  height: 100vh;
-  width: 100vw;
-  transition:  backdrop-filter .1s;
-  display: grid;
-  place-items: center;
+.s-line {
+  height: 40px;
+  border-left: 0.5px solid var(--box-border);
+  opacity: .5;
 }
-
-.setting-modal {
-  width: 300px;
-  height: 357px;
-  position: relative;
-  display: grid;
-  /* align-items: center; */
-  grid-template-rows: 44% 56%;
-  border-radius: 3px;
-  background-color: var(--back-color);
-  
-    /* transform: translate(0, 200%); */
-}
-
-#close {
-  cursor: pointer;
-  color: var(--dark-text);
-  position: absolute;
-  right: 12px;
-  top: 12px;
-  
-}
-
-.setting-content-top {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.profile {
-  margin-top: 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-  height: 99%;
-  width: 100%;
-}
-
-.profile p {
-  margin: 8px 0;
-  color: var(--dark-text);
-}
-
-.horizontal-line {
-  width: 95%;
-  border-bottom: .25px solid var(--normal-text);
-}
-
-
-/* setting content bot */
-.setting-content-bot {
-  padding: 0 20px;
-}
-
-.setting-content-bot i {
-  color: var(--dark-text);
-  font-size: 18px;
-}
-
-.setting-content-bot .content {
-  padding-left: 10px;
-  display: inline;
-  font-size: 14px;
-  font-weight: 500;
-  cursor: default;
-  color: var(--dark-text);
-}
-
-.setting-content-bot .title {
-  margin-top: 14px;
-  color: var(--normal-text);
-  font-size: 10px;
-  letter-spacing: 2px;
-  font-weight: 600;
-}
-
-.wrapper {
-  padding: 6px 0;
-}
-
-
-/* swicth */
-.switch {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 40px;
-  height: 20px;
-  outline: 1px solid var(--dark-text);
-  background-color: var(--back-color);
-  transition: .2s;
-  cursor: pointer;
-  border-radius: 9.5px;
-  float: right;
-}
-
-.switch-button {
-  position: absolute;
-  left: 0;
-  /* border: 1px solid black; */
-  margin: 0 1.8px;
-  height: 16px;
-  width: 16px;
-  background-color: var(--dark-text);
-  transition: .1s;
-  border-radius: 50%;
-}
-
-.switch-button-on {
-  /* background-color: var(--light-back); */
-  left: 20px;
-}
-
-
-
 
 
 /*                 */
 
 #select-drag {
   position: fixed;
-  z-index: -1;
-  opacity: 0.3;
-  display: none;
-  background-color: var(--dark-text);
-  display: none;
-  /* left: 200px;
-  top: 200px; */
-  /* opacity: 0; */
   width: 0;
   height: 0;
+  z-index: -1;
+  opacity: 0.3;
+  /* display: none; */
+  background-color: var(--dark-text);
+  /* left: -2000px;
+  top: -2000px; */
+}
+
+.loader {
+  display: inline-block;
+  border: 3px solid var(--dark-text); /* Light grey */
+  border-top: 3px solid var(--back-color); /* Blue */
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  animation: spin 1s linear infinite;
+}
+
+.loader-fix {
+  display: none;
+  transform: translate(0, 2px);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
