--- a/src/css/ui.css
+++ b/src/css/ui.css
@@ -6,12 +6,9 @@
   align-items: center;
   top: 20px;
   left: 50%;
-
-  /* border: 1px solid black; */
   transform: translate(-50%, 0);
   max-width: 100%;
   z-index: 2;
-  /* min-width: 600px; */
   height: 50px;
 }
 
@@ -19,7 +16,7 @@
   display: flex;
   flex-direction: row;
   column-gap: 10px;
-  margin: 0 0 0 5px;
+  /* margin: 0 0 0 5px; */
 
   /* justify-content: center; */
 }
