--- a/src/css/color.css
+++ b/src/css/color.css
@@ -1,7 +1,7 @@
 
 .color-palette-bg, .color-palette {
-  /* top: 0;
-  left: 0; */
+  top: 80px;
+  left: 0;
   padding: 15px;
   /* background-color: black; */
   background-color: rgb(248, 248, 248);
@@ -17,6 +17,13 @@
   border-radius: 3px;
 }
 
+.color-palette {
+left: calc(50% + 272px);
+}
+
+.color-palette-bg {
+left: calc(50% + 310px);
+}
 
 .color-item-bg:hover, .color-item:hover {
   outline: .4px solid #6c889e;
