--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -13,6 +13,7 @@
   background-image: url("../asset/dot-bg.svg");
   background-position: right top;
   background-size: 6px auto;
+  transition: filter .8s, opacity .8s;
   /* user-select: none; */
 }
 
